fix: Remove JDK 17 support, keep only JDK 21 and 25